# audio-event-detection

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  predict.py  preprocess.py  pyproject.toml  train.py
notebooks/: 01_eda.ipynb
src/: dataset.py  features.py  model.py  utils.py
src/heads/: __init__.py  head1.py  head2.py  headfactory.py
