[project]
name = "audio-event-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "kagglehub>=1.0.1",
    "librosa",
    "matplotlib",
    "pandas",
    "pytorch-lightning>=2.6.1",
    "pyyaml>=6.0.3",
    "setuptools==81.0.0",
    "tensorboard>=2.20.0",
    "torch",
    "torchaudio",
    "torchmetrics>=1.9.0",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
      "F",   # Formats
      "E",   # Errors
      "W",   # Whitespace
      "I",   # Imports
      "ARG", # Unused arguments
      "SIM", # Code simplifications
      "Q",   # Quotes
      "PIE", # Unnecessary operation
      "A",   # Built-ins shadowing
      "B",   # Bugs
      "PLE", # Errors
      "UP",  # Warn if certain things can changed due to newer Python versions
      "C4",  # Catch incorrect use of comprehensions
      "ICN", # Use common import conventions
      "RET", # Return practices
      "PTH", # Pathlib instead of os.path
      "NPY", # NumPy things
]
ignore = [
      "E741",
      "N803",
      "RET504",
      "ISC001",
      "F722",
]
